# neuro-san-legacy-analyzer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
coded_tools/legacy_extraction/: __init__.py  code_parser_tool.py  dependency_mapper_tool.py
config/: llm_config.hocon  llm_info.hocon
registries/: legacy_business_rules.hocon  manifest.hocon
sample_data/: cobol_inventory.cob  cobol_payment.cob  java_legacy_billing.java
tests/: conftest.py  test_cobol_inventory_sample.py  test_cobol_parser_extended.py  test_code_parser_java_extended.py  test_code_parser_plsql.py  test_code_parser_tool.py  test_dependency_mapper_java_extended.py  test_dependency_mapper_plsql.py  test_dependency_mapper_tool.py  test_edge_cases.py
