# ============================================================================
# pyproject.toml — Project metadata and dependency definitions.
#
# WHAT THIS FILE DOES:
#   Defines the project name, Python version requirement, and all dependencies
#   needed to run the agent network. Used by pip/uv to install everything.
#
# KEY DEPENDENCIES:
#   - neuro-san-studio: The Cognizant framework that runs our agent network
#     (ships with the Google Gemini provider used by this project)
#   - python-dotenv: Loads .env file so GOOGLE_API_KEY is available
# ============================================================================

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-san-legacy-analyzer"
version = "0.1.0"
description = "Multi-agent system that extracts business rules from legacy code (COBOL, Java, PL/SQL) using Cognizant's Neuro SAN framework."
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Siva Kumar Raju" }]
readme = "README.md"

dependencies = [
    "neuro-san-studio",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["coded_tools*", "registries*", "config*"]